--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="container">
         <div class="row">
             <figure class="col-lg-3 logo">
-                <img src="images\logo.png" class="img-fluid" alt="eshooper logo" />
+                <img src="logo.png" class="img-fluid" alt="eshooper logo" />
             </figure>
             <nav class="col-lg-9">
                 <ul class="nav justify-content-end top-menu">
@@ -101,13 +101,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images\banner2.jpg" class="d-block w-100" alt="...">
+                    <img src="banner2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images\sale-banner.jpg" class="d-block w-100" alt="...">
+                    <img src="sale-banner.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images\banner3.jfif" class="d-block w-100" alt="...">
+                    <img src="banner3.jfif" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -206,19 +206,19 @@
                         <span>50000</span>
                     </section>
                     <figure class="left-banner text centre">
-                        <img src="images/shipping.jpg" alt="" class="img-fluid">
+                        <img src="shipping.jpg" alt="" class="img-fluid">
                     </figure>
                     <figure class="left-banner text centre">
-                        <img src="images/girl1.jpg" alt="" class="img-fluid">
+                        <img src="girl1.jpg" alt="" class="img-fluid">
                     </figure>
                     <figure class="left-banner text centre">
-                        <img src="images/girl2.jpg" alt="" class="img-fluid">
+                        <img src="girl2.jpg" alt="" class="img-fluid">
                     </figure>
                     <figure class="left-banner text centre">
-                        <img src="images/girl3.jpg" alt="" class="img-fluid">
+                        <img src="girl3.jpg" alt="" class="img-fluid">
                     </figure>
                     <figure class="left-banner text centre">
-                        <img src="images/shipping.jpg" alt="" class="img-fluid">
+                        <img src="shipping.jpg" alt="" class="img-fluid">
                     </figure>
             </aside>
 
@@ -227,7 +227,7 @@
                 <h2 class="text-center text upperclass" id="sale">Bumper Sale Product</h2>
                 <div class="row">
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="images\product1.jpg" class="img-fluid" alt="">
+                        <img src="product1.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;2000</del> &#8377;1000
                         </h3>
@@ -237,7 +237,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="images\product2.jpg" class="img-fluid" alt="">
+                        <img src="product2.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;1800</del> &#8377;800
                         </h3>
@@ -248,7 +248,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="images\product3.jpg" class="img-fluid" alt="">
+                        <img src="\product3.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;2500</del> &#8377;1100
                         </h3>
@@ -258,7 +258,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="images\product4.jpg" class="img-fluid" alt="">
+                        <img src="\product4.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;3000</del> &#8377;2500
                         </h3>
@@ -268,7 +268,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="images\product5.jpg" class="img-fluid" alt="">
+                        <img src="\product5.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;2500</del> &#8377;1500
                         </h3>
@@ -278,7 +278,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="images\product6.jpg" class="img-fluid" alt="">
+                        <img src="\product6.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;2000</del> &#8377;1200
                         </h3>
@@ -296,7 +296,7 @@
                     <hr />
                     <div class="row">
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\women1.webp" class="img-fluid" alt="">
+                            <img src="\women1.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2500</del> &#8377;1550
                             </h3>
@@ -306,7 +306,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\women2.webp" class="img-fluid" alt="">
+                            <img src="\women2.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1850</del> &#8377;850
                             </h3>
@@ -317,7 +317,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\women3.webp" class="img-fluid" alt="">
+                            <img src="\women3.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1200</del> &#8377;750
                             </h3>
@@ -327,7 +327,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\women4.webp" class="img-fluid" alt="">
+                            <img src="\women4.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;2500
                             </h3>
@@ -337,7 +337,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\women5.webp" class="img-fluid" alt="">
+                            <img src="\women5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;2500
                             </h3>
@@ -347,7 +347,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\women6.webp" class="img-fluid" alt="">
+                            <img src="\women6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2000</del> &#8377;1200
                             </h3>
@@ -366,7 +366,7 @@
                     <hr />
                     <div class="row">
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\men1.webp" class="img-fluid" alt="">
+                            <img src="\men1.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2000</del> &#8377;1000
                             </h3>
@@ -376,7 +376,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\men2.webp" class="img-fluid" alt="">
+                            <img src="\men2.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;800</del> &#8377;500
                             </h3>
@@ -387,7 +387,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\men3.webp" class="img-fluid" alt="">
+                            <img src="\men3.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1100
                             </h3>
@@ -397,7 +397,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\men4.webp" class="img-fluid" alt="">
+                            <img src="\men4.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;800
                             </h3>
@@ -407,7 +407,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\men5.webp" class="img-fluid" alt="">
+                            <img src="\men5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1500
                             </h3>
@@ -417,7 +417,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\men6.webp" class="img-fluid" alt="">
+                            <img src="\men6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1700</del> &#8377;1200
                             </h3>
@@ -436,7 +436,7 @@
                     <hr />
                     <div class="row">
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\kid1.webp" class="img-fluid" alt="">
+                            <img src="\kid1.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2000</del> &#8377;1000
                             </h3>
@@ -446,7 +446,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\kid2.webp" class="img-fluid" alt="">
+                            <img src="\kid2.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1800</del> &#8377;800
                             </h3>
@@ -457,7 +457,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\kid3.webp" class="img-fluid" alt="">
+                            <img src="\kid3.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;1100
                             </h3>
@@ -467,7 +467,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\kid4.webp" class="img-fluid" alt="">
+                            <img src="\kid4.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;1100
                             </h3>
@@ -477,7 +477,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\kid5.webp" class="img-fluid" alt="">
+                            <img src="\kid5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1500
                             </h3>
@@ -487,7 +487,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="images\kid6.webp" class="img-fluid" alt="">
+                            <img src="\kid6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1500</del> &#8377;1200
                             </h3>
@@ -575,9 +575,9 @@
                         <h4 class="text-uppercase pt-2">Partners</h4>
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <img src="images\partner3.png" class="img-fluid" alt="">
+                                <img src="\partner3.png" class="img-fluid" alt="">
                             <li class="nav-item">
-                                <img src="images\partner4.png" class="img-fluid" alt="">
+                                <img src="\partner4.png" class="img-fluid" alt="">
                             </li>
 
                         </ul>
@@ -586,10 +586,10 @@
                         <h4 class="text-uppercase pt-2">Partners</h4>
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <img src="images\partner1.png" class="img-fluid" alt="">
+                                <img src="\partner1.png" class="img-fluid" alt="">
                             </li>
                             <li class="nav-item">
-                                <img src="images\partner2.png" class="img-fluid" alt="">
+                                <img src="\partner2.png" class="img-fluid" alt="">
                             </li>
                         </ul>
 
