--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="\product3.jpg" class="img-fluid" alt="">
+                        <img src="product3.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;2500</del> &#8377;1100
                         </h3>
@@ -258,7 +258,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="\product4.jpg" class="img-fluid" alt="">
+                        <img src="product4.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;3000</del> &#8377;2500
                         </h3>
@@ -268,7 +268,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="\product5.jpg" class="img-fluid" alt="">
+                        <img src="product5.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;2500</del> &#8377;1500
                         </h3>
@@ -278,7 +278,7 @@
                         </p>
                     </figure>
                     <figure class="col-lg-4 col-6 text-center">
-                        <img src="\product6.jpg" class="img-fluid" alt="">
+                        <img src="product6.jpg" class="img-fluid" alt="">
                         <h3>
                             <del>&#8377;2000</del> &#8377;1200
                         </h3>
@@ -296,7 +296,7 @@
                     <hr />
                     <div class="row">
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\women1.webp" class="img-fluid" alt="">
+                            <img src="women1.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2500</del> &#8377;1550
                             </h3>
@@ -306,7 +306,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\women2.webp" class="img-fluid" alt="">
+                            <img src="women2.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1850</del> &#8377;850
                             </h3>
@@ -317,7 +317,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\women3.webp" class="img-fluid" alt="">
+                            <img src="women3.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1200</del> &#8377;750
                             </h3>
@@ -327,7 +327,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\women4.webp" class="img-fluid" alt="">
+                            <img src="women4.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;2500
                             </h3>
@@ -337,7 +337,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\women5.webp" class="img-fluid" alt="">
+                            <img src="women5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;2500
                             </h3>
@@ -347,7 +347,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\women6.webp" class="img-fluid" alt="">
+                            <img src="women6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2000</del> &#8377;1200
                             </h3>
@@ -366,7 +366,7 @@
                     <hr />
                     <div class="row">
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\men1.webp" class="img-fluid" alt="">
+                            <img src="men1.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2000</del> &#8377;1000
                             </h3>
@@ -376,7 +376,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\men2.webp" class="img-fluid" alt="">
+                            <img src="men2.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;800</del> &#8377;500
                             </h3>
@@ -387,7 +387,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\men3.webp" class="img-fluid" alt="">
+                            <img src="men3.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1100
                             </h3>
@@ -397,7 +397,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\men4.webp" class="img-fluid" alt="">
+                            <img src="men4.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;800
                             </h3>
@@ -407,7 +407,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\men5.webp" class="img-fluid" alt="">
+                            <img src="men5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1500
                             </h3>
@@ -417,7 +417,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\men6.webp" class="img-fluid" alt="">
+                            <img src="men6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1700</del> &#8377;1200
                             </h3>
@@ -436,7 +436,7 @@
                     <hr />
                     <div class="row">
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\kid1.webp" class="img-fluid" alt="">
+                            <img src="kid1.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2000</del> &#8377;1000
                             </h3>
@@ -446,7 +446,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\kid2.webp" class="img-fluid" alt="">
+                            <img src="kid2.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1800</del> &#8377;800
                             </h3>
@@ -457,7 +457,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\kid3.webp" class="img-fluid" alt="">
+                            <img src="kid3.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;1100
                             </h3>
@@ -467,7 +467,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\kid4.webp" class="img-fluid" alt="">
+                            <img src="kid4.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;1100
                             </h3>
@@ -477,7 +477,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\kid5.webp" class="img-fluid" alt="">
+                            <img src="kid5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1500
                             </h3>
@@ -487,7 +487,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="\kid6.webp" class="img-fluid" alt="">
+                            <img src="kid6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1500</del> &#8377;1200
                             </h3>
@@ -575,9 +575,9 @@
                         <h4 class="text-uppercase pt-2">Partners</h4>
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <img src="\partner3.png" class="img-fluid" alt="">
+                                <img src="partner3.png" class="img-fluid" alt="">
                             <li class="nav-item">
-                                <img src="\partner4.png" class="img-fluid" alt="">
+                                <img src="partner4.png" class="img-fluid" alt="">
                             </li>
 
                         </ul>
@@ -586,10 +586,10 @@
                         <h4 class="text-uppercase pt-2">Partners</h4>
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <img src="\partner1.png" class="img-fluid" alt="">
+                                <img src="partner1.png" class="img-fluid" alt="">
                             </li>
                             <li class="nav-item">
-                                <img src="\partner2.png" class="img-fluid" alt="">
+                                <img src="partner2.png" class="img-fluid" alt="">
                             </li>
                         </ul>
 
