--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="banner2.jpg" class="d-block w-100" alt="...">
+                    <img src="/banner2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="sale-banner.jpg" class="d-block w-100" alt="...">
+                    <img src="/sale-banner.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="banner3.jfif" class="d-block w-100" alt="...">
+                    <img src="/banner3.jfif" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
