--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/banner2.jpg" class="d-block w-100" alt="...">
+                    <img src="banner2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/sale-banner.jpg" class="d-block w-100" alt="...">
+                    <img src="sale-banner.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/banner3.jfif" class="d-block w-100" alt="...">
+                    <img src="banner3.jfif" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -397,7 +397,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="men4.webp" class="img-fluid" alt="">
+                            <img src="MEN4.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;800
                             </h3>
@@ -407,7 +407,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="men5.webp" class="img-fluid" alt="">
+                            <img src="MEN5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1500
                             </h3>
@@ -417,7 +417,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="men6.webp" class="img-fluid" alt="">
+                            <img src="MEN6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1700</del> &#8377;1200
                             </h3>
@@ -436,7 +436,7 @@
                     <hr />
                     <div class="row">
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="kid1.webp" class="img-fluid" alt="">
+                            <img src="KID1.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;2000</del> &#8377;1000
                             </h3>
@@ -446,7 +446,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="kid2.webp" class="img-fluid" alt="">
+                            <img src="KID2.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1800</del> &#8377;800
                             </h3>
@@ -457,7 +457,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="kid3.webp" class="img-fluid" alt="">
+                            <img src="KID3.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;1100
                             </h3>
@@ -467,7 +467,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="kid4.webp" class="img-fluid" alt="">
+                            <img src="KID4.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1300</del> &#8377;1100
                             </h3>
@@ -477,7 +477,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="kid5.webp" class="img-fluid" alt="">
+                            <img src="KID5.webp" class="img-fluid" alt="">
                             <h3>
                                 &#8377;1500
                             </h3>
@@ -487,7 +487,7 @@
                             </p>
                         </figure>
                         <figure class="col-lg-4 col-6 text-center">
-                            <img src="kid6.webp" class="img-fluid" alt="">
+                            <img src="KID6.webp" class="img-fluid" alt="">
                             <h3>
                                 <del>&#8377;1500</del> &#8377;1200
                             </h3>
